fix quiz module create